Changed Rotation Around Point to Vector Class and added example

--- a/2D OpenGL Renderer/2D OpenGL Renderer.vcxproj
+++ b/2D OpenGL Renderer/2D OpenGL Renderer.vcxproj
@@ -167,9 +167,9 @@
     <ClCompile Include="dependencies\glad-4.5\src\glad.c" />
     <ClCompile Include="src\Buffers.cpp" />
     <ClCompile Include="src\Input.cpp" />
-    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Shader.cpp" />
+    <ClCompile Include="src\Examples\Gradient.cpp" />
     <ClCompile Include="src\Text.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\VertexArray.cpp" />
@@ -183,7 +183,7 @@
     <ClInclude Include="src\Input.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\Shader.h" />
-    <ClInclude Include="src\stb_image.h" />
+    <ClInclude Include="src\Vendor\stb_image.h" />
     <ClInclude Include="src\Text.h" />
     <ClInclude Include="src\Texture.h" />
     <ClInclude Include="src\Vector.h" />
